[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4.4", features = ["all"] }
nix = "0.24.1"
libc = "0.2"
once_cell = "1.13.0"
serde = "1.0"
serde_derive = "1"
bincode = "1"